<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item">Add New Item</string>
    <string name="expand_menu">Expand your kitchen menu</string>
    <string name="all">All</string>

    <!-- Bottom Navigation -->
    <string name="nav_home">Trang chủ</string>
    <string name="nav_orders">Đơn hàng</string>
    <string name="nav_history">Lịch sử</string>
    <string name="nav_cart">Giỏ hàng</string>
    <string name="nav_profile">Cá nhân</string>

    <!-- Profile Screen -->
    <string name="profile_title">Tài khoản</string>
    <string name="profile_spending_title">Chi tiêu tháng này</string>
    <string name="profile_my_reviews">Đánh giá của tôi</string>
    <string name="profile_support">Hỗ trợ</string>
    <string name="profile_logout">Đăng xuất</string>
    <string name="logout_confirm_title">Đăng xuất?</string>
    <string name="logout_confirm_message">Bạn muốn đăng xuất khỏi tài khoản này?</string>
    <string name="action_cancel">Hủy</string>
    <string name="profile_week_1">Tuần 1</string>
    <string name="profile_week_2">Tuần 2</string>
    <string name="profile_week_3">Tuần 3</string>
    <string name="profile_week_4">Tuần 4</string>

    <!-- Order -->
    <string name="order_summary">Tóm tắt đơn hàng</string>
    <string name="order_total">Tổng cộng</string>
</resources>
